[gd_scene load_steps=10 format=3 uid="uid://xea8ftlsofur"]

[ext_resource type="Script" path="res://Scripts/flying_skull.gd" id="1_jd75j"]
[ext_resource type="Texture2D" uid="uid://dmpbl3uvsbeub" path="res://Assets/2D Pixel Dungeon Asset Pack/Character_animation/monsters_idle/skull/v2/skull_v2_1.png" id="1_lliac"]
[ext_resource type="Texture2D" uid="uid://ceongy0t5p4qi" path="res://Assets/2D Pixel Dungeon Asset Pack/Character_animation/monsters_idle/skull/v2/skull_v2_2.png" id="2_slubg"]
[ext_resource type="Texture2D" uid="uid://bijhh7hwh06kb" path="res://Assets/2D Pixel Dungeon Asset Pack/Character_animation/monsters_idle/skull/v2/skull_v2_3.png" id="3_of6bo"]
[ext_resource type="Texture2D" uid="uid://c8v22rn8rww7i" path="res://Assets/2D Pixel Dungeon Asset Pack/Character_animation/monsters_idle/skull/v2/skull_v2_4.png" id="4_e6rg1"]
[ext_resource type="PackedScene" uid="uid://cyjtc8h2wx0va" path="res://Scenes/kill_zone.tscn" id="5_x32mf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ya6hq"]
size = Vector2(11, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_u2o3j"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_lliac")
}, {
"duration": 1.0,
"texture": ExtResource("2_slubg")
}, {
"duration": 1.0,
"texture": ExtResource("3_of6bo")
}, {
"duration": 1.0,
"texture": ExtResource("4_e6rg1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2nrmd"]
size = Vector2(11, 12)

[node name="FlyingSkull" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 18
script = ExtResource("1_jd75j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_ya6hq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_u2o3j")
autoplay = "default"
frame_progress = 0.256735

[node name="KillZone" parent="." instance=ExtResource("5_x32mf")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillZone"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_2nrmd")
debug_color = Color(0.93762, 0.195956, 0.400476, 0.42)

[node name="sprite_timer" type="Timer" parent="."]

[node name="attack_timer" type="Timer" parent="."]

[node name="RayCast top-right" type="RayCast2D" parent="."]
target_position = Vector2(120, -10)
collision_mask = 2

[node name="RayCast bot-right" type="RayCast2D" parent="."]
target_position = Vector2(120, 10)
collision_mask = 2

[node name="RayCast bot-left" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(120, -10)
collision_mask = 2

[node name="RayCast top-left" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(120, 10)
collision_mask = 2

[node name="RayCast up-right" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(-8, 120)
collision_mask = 2

[node name="RayCast up-left" type="RayCast2D" parent="."]
rotation = 3.14159
target_position = Vector2(8, 120)
collision_mask = 2

[node name="RayCast down-left" type="RayCast2D" parent="."]
rotation = 3.13982
target_position = Vector2(8, -120)
collision_mask = 2

[node name="RayCast down-right" type="RayCast2D" parent="."]
rotation = 3.13982
target_position = Vector2(-8, -120)
collision_mask = 2

[connection signal="timeout" from="sprite_timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="attack_timer" to="." method="_on_attack_timer_timeout"]
